test_cases/negative/rescurive_import_1.snek
import "./rescurive_import_2.snek" as lib;
